Add Kryo to the basic benchmarks